@@ -1,12 +1,17 @@
+import logging
 import os
 
 import arcade
+import mouse
 
 import constants.controls.keyboard
+from constants.controls.controller import AXIS_RIGHT, AXIS_LEFT, AXIS_DOWN, AXIS_UP
 from utils.screenshot import make_screenshot
 from utils.text import MARGIN, create_text
 from utils.text import draw_debug
 
+
+MOUSE_POINTER_SPEED = 10
 
 class View(arcade.View):
 
@@ -23,6 +28,8 @@ class View(arcade.View):
         self.alt_key_pressed = False
 
         self.view = None
+
+        self.move_pointer = None
 
     def on_key_press(self, key, modifiers):
 
@@ -76,3 +83,46 @@ class View(arcade.View):
 
     def draw_debug(self, player_sprite=None):
         draw_debug(player_sprite, self.window)
+
+
+    def on_stick_motion(self, controller, stick_name, x_value, y_value):
+        logging.info(f"Stick motion {stick_name}, {x_value}, {y_value}")
+
+        x_value = round(x_value)
+        y_value = round(y_value)
+
+        x, y = 0, 0
+
+        if x_value == AXIS_RIGHT:
+            x += MOUSE_POINTER_SPEED
+        elif x_value == AXIS_LEFT:
+            x -= MOUSE_POINTER_SPEED
+
+        if y_value == AXIS_DOWN:
+            y += MOUSE_POINTER_SPEED
+        elif y_value == AXIS_UP:
+            y -= MOUSE_POINTER_SPEED
+
+        move_pointer = (x, y)
+
+        if x == 0 and y == 0:
+            move_pointer = None
+
+        self.move_pointer = move_pointer
+
+    def on_button_press(self, controller, key):
+        logging.info(f"Controller button {key} pressed")
+        mouse.click()
+
+    def push_controller_handlers(self):
+        for controller in self.window.controllers:
+            controller.push_handlers(self)
+
+    def pop_controller_handlers(self):
+        for controller in self.window.controllers:
+            controller.pop_handlers()
+
+    def update_mouse(self):
+        if self.move_pointer:
+            x, y = self.move_pointer
+            mouse.move(x, y, absolute=False)
